Added HTML, CSS. Added new addListItem() and ShowDetails() functions.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
     <title>Simple JS App</title>
 </head>
 <body>
+    <header>
+        <h1 class="logo header__item">Pokedex</h1>
+        <div class="search-bar header__item">Search bar</div>
+    </header>
+
+    <div class="main-content">
+        <ul class="pokemon-list">
+            <!-- <li class="pokemon-list__item">
+                <button class="pokemon-list__item__button"></button>
+            </li>       -->
+        </ul>
+    </div>
+
+    <footer>
+
+    </footer>
     <script src="js/script.js"></script>
 </body>
 </html>
