Added API functionality, changed variable names

--- a/index.html
+++ b/index.html
@@ -15,16 +15,15 @@
     </header>
 
     <div class="main-content">
-        <ul class="pokemon-list">
-            <!-- <li class="pokemon-list__item">
-                <button class="pokemon-list__item__button"></button>
-            </li>       -->
+        <ul class="item-list">
+            <!-- Pokemons will be shown here -->
         </ul>
     </div>
 
     <footer>
 
     </footer>
+    <script src="js/polyfill.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
